tests/shouldFail/j075a.c
int * x;
int * const x;

int main(void){
	return 0;
}
